fixed overflow

--- a/css/index.processed.css
+++ b/css/index.processed.css
@@ -50,6 +50,8 @@ content page .table {
   -webkit-font-smoothing: antialiased;
   background-color: rgba(200, 200, 200, 0.1);
   z-index: 300;
+  max-height: 66vh; /* Sets the maximum height of the div to 66% of the viewport height */
+  overflow-y: auto;
 }
 
 content page .table b {
